expo/gbe/static/styles/base.css
/* ... */
/*
span.perfhover span
{
  position: absolute;
  left: -9999px;
  margin: 4px 0 0 0px;
  padding: 3px 3px 3px 3px; 
  border-style:solid;
  border-color:black;
  border-width:1px;
}
*/
span.perfhover:hover span
{
  left: -200px;
  top: 20px;
  width: 500px;
  margin: 20px 0 0 170px;
  background: #ffffff;
  z-index:6;
} 


td.title
{
  border: solid 1px black; 
  width: 20%;
  padding: 2px;
}

td.describe
{
  border:solid 1px black; 
  width: 40%;
  padding: 2px;
}

.helptext
{
  font-style: italic;
  color: grey;
}

.listblock
{
  padding-right: 20px;
  padding-left: 20px;
}


.listheader
{
  font-family: "TwentiethCenturyPoster";
  font-size: 30px;
  color: #333333;
}

.listsubheader
{
  font-family: Lucida Grande,Tahoma,Verdana,sans-serif;
  font-size: 20px;
  color: #333333;
}

.listdetails
{
}
.listlabel
{
 font-weight: bold;
}
.listdesc
{
  padding-top: 10px;
  padding-left: 30px;
  color: #000;
  font-size: 11px;
  font-family: Lucida Grande,Tahoma,Verdana,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  letter-spacing: normal;	
}
.listline
{
  padding: 0;
  border: none;
  border-top: medium double #333;
  color: #333;
  text-align: center;
  width: 90%
}
  
.listline:after
{
  display: inline-block;
  position: relative;
  top: -0.7em;
  font-size: 1.5em;
  padding: 0 0.25em;
  background: white;
}


/*Schedule detail view*/
.sched_block
{
    margin: 10px;
    width: 100%;
}
.sched_desc
{
  padding-top: 10px;
  align:left;
  width:70%;
  display: inline-block;
  vertical-align: top;
}
.sched_sidebar
{
  width:27%;
  align: right;
  display: inline-block;
}
.sched_times
{
  border-style: double;
  background: #C3BDBF;
  border-radius: 8px;
  padding: 8px;
  margin-bottom: 8px;
}
.bio_block
{
    border: 1px solid black;
    margin: 10px;
    padding: 10px;
}
.sched_detail_title
{
  color: #333333;
  font-family: TwentiethCenturyPoster;
  font-size: 30px;
}
.sched_detail
{
 font-weight: bold;
}
.sched_length
{
  
}
.sched_details
{
}

.ticket
{
  margin-left: 10px;
  font-weight: normal;
}
.conf_tickets
{
  font-weight: bold;
}
.ticket_link
{
  
}
.ticket_list
{
  
}
.ticket_list_item
{
  margin-left: 15px;
}
.ticket_name
{
 font-weight: bold;
}
.sched_bio_image
{
  width: 300px;
  margin: 3px;
  display: inline-block;
}
div.performer
{
}
.gbe_no_pic
{
  width: 50px;
  height: 20px;
  display: inline-block;
  margin: 2px;
}
.gbe_thumb_block
{
  width: 50px;
  max-height: 75px;
  display: inline-block;
  margin: 2px;
}
.gbe_thumbnail
{
  width: 100%;
  height: auto;
}
.performer_text
{
  display: inline-block;
  width: 190px;
  vertical-align: middle;
  word-wrap:break-word;
}
.bio_image_block
{
  width: 28%;
  text-align:right;
  display: inline-block;
}
.bio_words
{
  width: 45%;
  display: inline-block;
  vertical-align: top;
}
.bio_name
{
  margin: 10px 0px;
}

table.events-table
{
    border:1px solid;
    
}

table.events-table th
{
    border:1px solid;
    text-align: left;
}

table.events-table td
{
    border:1px solid;
}

tr.event_edit_row
{
  vertical-align: top;
} 

tr.event_opp_row
{
  vertical-align: top;
} 

table.event_opps  tr.event_opp_row:nth-child(even)
{
  background-color: #CCC;
} 

table.event_opps  tr.event_opp_row:nth-child(odd)
{
  background-color: #EEE;
} 

tr.changed
{
  background-color: #BA8E70;
}

tr.blank_row
{
  background-color: #D0D0D0 ;
}


div.gbe-alert 
{
    background-color: rgba(241, 221, 91, 01);
}



/* landing page layouts
    taken from:  http://matthewjamestaylor.com/blog/perfect-3-column.htm */

/* column container */
.colmask {
	position:relative;	/* This fixes the IE7 overflow hidden bug */
	clear:both;
	width:100%;			/* width of whole page */
	overflow:hidden;		/* This chops off any overhanging divs */
}
/* common column settings */
.colright,
.colmid,
.colleft {
	float:left;
	width:100%;			/* width of page */
	position:relative;
}
.col1,
.col2,
.col3 {
	float:left;
	position:relative;
	padding:0 0 1em 0;	/* no left and right padding on columns, we just make them narrower instead 
					only padding top and bottom is included here, make it whatever value you need */
	overflow:hidden;
}
/* 3 Column settings */
.threecol {
}
.threecol .colmid {
	right:33%;			/* width of the right column */
}
.threecol .colleft {
	right:33%;			/* width of the middle column */
}
.threecol .col1 {
	width:31%;			/* width of center column content (column width minus padding on either side) */
	left:102%;			/* 100% plus left padding of center column */
}
.threecol .col2 {
	width:31%;			/* Width of left column content (column width minus padding on either side) */
	left:36%;			/* width of (right column) plus (center column left and right padding) plus (left column left padding) */
}
.threecol .col3 {
	width:30%;			/* Width of right column content (column width minus padding on either side) */
	left:73%;			/* Please make note of the brackets here:
					(100% - left column width) plus (center column left and right padding) plus (left column left and right padding) plus (right column left padding) */
}
.landing_box{
	border: 1px solid black;
        padding: 10px;
}

/* Landing page, center blocks */

div.landing_box>div.schedule_section> div.event {
  /* set line-height here */
}

div.landing_box>div.ticket_section > div.ticket {
  /* set line-height here */
}

/* Landing page, right-column blocks */
div.sidebar>div.sidebar-text {
    border: solid;
    border-color: #C3BDBF;
    padding: 18px;
    margin-bottom: 10px;
}

div.sidebar>div.act_section {
    background-color:#C3BDBF;
    padding-left:5px;
    padding-top:5px;
}

div.bid_review_section{
    margin-top: 10px;
    background-color:#C3BDBF;
    padding-left:5px;
    padding-top:5px;
}

div.sidebar>div.class_section {
    margin-top: 10px;
    background-color:#E3DDDF;
    padding-left:5px;
    padding-top:5px;
}

div.sidebar>div.performer_section {
    background-color:#E3DDDF;
    padding-left:5px;
    padding-top:5px;
}
/* ... */

